--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
 
 <body>
   <script src="js/scripts.js"></script>
+  Swedish Straw Bed
+  No farrowing crates
+  No injections of any kind. No hormones or antibiotics.
+  All natural grain fed, no corn.
+  Selling feeders starting at about 30 lbs.
+  No tails cut
+  No ears knotched
+  No teeth cut
 </body>
 </html>
