--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  Swedish Straw Bed
+  Swedish Deep-Straw Farrowing System
   No farrowing crates
   No injections of any kind. No hormones or antibiotics.
   All natural grain fed, no corn.
@@ -26,4 +26,13 @@
   No ears knotched
   No teeth cut
 </body>
+<h1>Flexible columns &mdash; fixed width gutter</h1>
+<h2>Using a border as faux margin</h2>
+
+<div class="flexwrapper">
+	<section></section>
+	<section></section>
+	<section></section>
+	<section></section>
+</div>
 </html>
