--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>Winkky Farms</title>
+  <meta name="description" content="Winkky Farms">
+  <meta name="author" content="Rob Winkky">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/boxes.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,22 +17,25 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  Swedish Deep-Straw Farrowing System
-  No farrowing crates
-  No injections of any kind. No hormones or antibiotics.
-  All natural grain fed, no corn.
-  Selling feeders starting at about 30 lbs.
-  No tails cut
-  No ears knotched
-  No teeth cut
-</body>
-<h1>Flexible columns &mdash; fixed width gutter</h1>
-<h2>Using a border as faux margin</h2>
+<h1>Winkky Farms</h1>
+<h2>Natural, Humane, and Happy Pigs</h2>
 
 <div class="flexwrapper">
-	<section></section>
-	<section></section>
-	<section></section>
-	<section></section>
-</div>
+	<section>
+	    <ul>
+	    	<li>Swedish Deep-Straw Farrowing System</li>
+	    	<li> No farrowing crates</li>
+	    </ul>
+  	   
+	</section>
+	<section>  No injections of any kind. No hormones or antibiotics.
+  All natural grain fed, no corn.</section>
+	<section>  No tails cut
+  No ears knotched
+  No teeth cut</section>
+	<section>
+		  Selling feeders starting at about 30 lbs.
+	</section>
+</div> 
+</body>
 </html>
