--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Winkky Farms">
   <meta name="author" content="Rob Winkky">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
