--- a/index.html
+++ b/index.html
@@ -18,24 +18,32 @@
 <body>
   <script src="js/scripts.js"></script>
 <h1>Winkky Farms</h1>
-<h2>Natural, Humane, and Happy Pigs</h2>
+<h2>Healthy, Happy, and Humane Pigs</h2>
 
 <div class="flexwrapper">
-	<section>
-	    <ul>
-	    	<li>Swedish Deep-Straw Farrowing System</li>
-	    	<li> No farrowing crates</li>
-	    </ul>
-  	   
+    <section>
+        <h3>Healthy</h3>
+        <p>No antibiotics<p>
+        <p>No injections</p>
+        <p>No hormones</p>
+
+    </section>
+    
+    <section>
+        <h3>Happy</h3>
+        <p>Swedish Deep-Straw Farrowing System</p>
+        <p>All natural grain fed, no corn</p>
+        <p>No farrowing crates</p>
+
 	</section>
-	<section>  No injections of any kind. No hormones or antibiotics.
-  All natural grain fed, no corn.</section>
-	<section>  No tails cut
-  No ears knotched
-  No teeth cut</section>
+
 	<section>
-		  Selling feeders starting at about 30 lbs.
-	</section>
+        <h3>Humane</h3>
+        <p>No ears knotched</p>
+        <p>No tails cut</p>
+        <p>No teeth cut</p>
+    </section>
+
 </div> 
 </body>
 </html>
