--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Winkky Farms</title>
   <meta name="description" content="Winkky Farms">
   <meta name="author" content="Rob Winkky">
-
+  <link rel="icon" type="image/png" href="favicon.ico" />
   <link rel="stylesheet" href="css/styles.css">
 
   <!--[if lt IE 9]>
