--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+
 </head>
 
 <body>
@@ -44,6 +45,15 @@
         <p>No teeth cut</p>
     </section>
 
-</div> 
+</div>
+<div class="footer">
+    For information on buying a pig email:
+    <script language="JavaScript">
+        var username = "pigs";
+        var hostname = "winkkyfarms.com";
+        var linktext = username + "@" + hostname ;
+        document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+    </script>
+</div>    
 </body>
 </html>
