added webmaster tools

--- a/index.html
+++ b/index.html
@@ -1,59 +1,62 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
 
-  <title>Winkky Farms</title>
-  <meta name="description" content="Winkky Farms">
-  <meta name="author" content="Rob Winkky">
-  <link rel="icon" type="image/png" href="favicon.ico" />
-  <link rel="stylesheet" href="css/styles.css">
+	<title>Winkky Farms</title>
+	<meta name="description" content="Winkky Farms">
+	<meta name="author" content="Rob Winkky">
+	<link rel="icon" type="image/png" href="favicon.ico" />
+	<link rel="stylesheet" href="css/styles.css">
 
-  <!--[if lt IE 9]>
+	<!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-<h1>Winkky Farms</h1>
-<h2>Healthy, Happy, and Humane Pigs</h2>
+	<script src="js/scripts.js"></script>
+	<h1>Winkky Farms</h1>
+	<h2>Healthy, Happy, and Humane Pigs</h2>
 
-<div class="flexwrapper">
-    <section>
-        <h3>Healthy</h3>
-        <p>No antibiotics<p>
-        <p>No injections</p>
-        <p>No hormones</p>
+	<div class="flexwrapper">
+		<section>
+			<h3>Healthy</h3>
+			<p>No antibiotics
+				<p>
+					<p>No injections</p>
+					<p>No hormones</p>
 
-    </section>
-    
-    <section>
-        <h3>Happy</h3>
-        <p>Swedish Deep-Straw Farrowing System</p>
-        <p>All natural grain fed, no corn</p>
-        <p>No farrowing crates</p>
+		</section>
 
-	</section>
+		<section>
+			<h3>Happy</h3>
+			<p>Swedish Deep-Straw Farrowing System</p>
+			<p>All natural grain fed, no corn</p>
+			<p>No farrowing crates</p>
 
-	<section>
-        <h3>Humane</h3>
-        <p>No ears knotched</p>
-        <p>No tails cut</p>
-        <p>No teeth cut</p>
-    </section>
+		</section>
 
-</div>
-<div class="footer">
-    For information on buying a pig email:
-    <script language="JavaScript">
-        var username = "pigs";
-        var hostname = "winkkyfarms.com";
-        var linktext = username + "@" + hostname ;
-        document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
-    </script>
-</div>    
+		<section>
+			<h3>Humane</h3>
+			<p>No ears knotched</p>
+			<p>No tails cut</p>
+			<p>No teeth cut</p>
+		</section>
+
+	</div>
+	<div class="footer">
+		For information on buying a pig email:
+		<script language="JavaScript">
+			var username = "pigs";
+			var hostname = "winkkyfarms.com";
+			var linktext = username + "@" + hostname;
+			document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+		</script>
+	</div>
 </body>
+
 </html>
